@@ -53,7 +53,7 @@ ENTITY {
     },
     output_fluid_box =
     {
-      base_area = 1,
+      base_area = 10,
       base_level = 1,
       --height = 10,
       pipe_covers = DATA.Pipes.covers(false, true, true, true),
