@@ -50,7 +50,7 @@ ENTITY {
     },
     output_fluid_box =
     {
-        base_area = 10,
+        base_area = 40,
         base_level = 1,
         --height = 10,
       pipe_covers = DATA.Pipes.covers(false, true, true, true),
