@@ -52,7 +52,7 @@ ENTITY {
     },
     output_fluid_box =
     {
-      base_area = 1,
+      base_area = 40,
       base_level = 1,
       pipe_covers = DATA.Pipes.covers(false, true, true, true),
       pipe_picture = DATA.Pipes.pictures("assembling-machine-2", nil, {0.0, -0.96}, nil, nil),
